fix nav wrap

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -336,7 +336,7 @@ div.banner {
 .navbar-header-ttc ul li {
   display: inline-block;
   height: 50px;
-  padding: 0 20px;
+  padding: 0 16px;
 }
 
 .navbar-header-ttc ul li a {
